--- a/packages.Rmd
+++ b/packages.Rmd
@@ -71,7 +71,7 @@ Other ideas
 </th>
 <th style="font-weight:normal;">
 <br>
-Following precedent of [`stantargets`](https://docs.ropensci.org/stantargets/), it should be possible to extend the R Targetopia to more methodology packages whose users face intense computation, long runtimes, and rapid changes. Possibilities include [`greta`](https://greta-stats.org), [`nimble`](https://r-nimble.org), [`keras`](https://keras.rstudio.com), [`torch`](https://torch.mlverse.org), [`torchvision`](https://github.com/mlverse/torchvision), [`tidymodels`](https://github.com/tidymodels/tidymodels), [`mlr3`](https://mlr3.mlr-org.com/), and [`nlmixr`](https://github.com/nlmixrdevelopment/nlmixr).
+Following precedent of [`stantargets`](https://docs.ropensci.org/stantargets/), it should be possible to extend the R Targetopia to more methodology packages whose users face intense computation, long runtimes, and rapid changes. Possibilities include [`greta`](https://greta-stats.org), [`nimble`](https://r-nimble.org), [`keras`](https://keras.rstudio.com), [`torch`](https://torch.mlverse.org), [`torchvision`](https://github.com/mlverse/torchvision), [`tidymodels`](https://github.com/tidymodels/tidymodels), [`mlr3`](https://mlr3.mlr-org.com/), and [`nlmixr`](https://github.com/nlmixrdevelopment/nlmixr). In addition, following [this thread](https://github.com/ropensci/tarchetypes/discussions/46), there may be need for a literate-programming-focused package with target factories outside the scope of `tarchetypes`.
 </ul>
 <br><br>
 </th>
