fix: Change URLs pointing to targets book

--- a/contributing.Rmd
+++ b/contributing.Rmd
@@ -142,7 +142,7 @@ tar_manifest(fields = command)
 
 Situational knowledge helps us supply optimal arguments to [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) that the user should not need to bother with. We have four such examples in `target_factory()` above.
 
-1. `deployment = "main"`: the data file lives on the user's local machine or login node, so remote workers in [high-performance computing](https://wlandau.github.io/targets-manual/hpc.html) scenarios may not be able to access it. Targets like these should not run on remote compute nodes.
+1. `deployment = "main"`: the data file lives on the user's local machine or login node, so remote workers in [high-performance computing](https://books.ropensci.org/targets/hpc.html) scenarios may not be able to access it. Targets like these should not run on remote compute nodes.
 1. `format = "file"`: track the input data file and invalidate the appropriate targets when the contents of the file change.
 1. `format = "fst_tbl"`: the `"fst_tbl"` is a specialized format to efficiently store and retrieve data frames.
 1. `format = "qs"`: efficient general-purpose storage format for R objects.
@@ -151,15 +151,15 @@ Many of the remaining arguments to [`tar_target_raw()`](https://docs.ropensci.or
 
 ### Branching
 
-[Dynamic branching](https://wlandau.github.io/targets-manual/dynamic.html) and [static branching](https://wlandau.github.io/targets-manual/static.html) are difficult for most end users, so the mechanics of branching should happen behind the scenes. Simplification and guardrails are critical.
+[Dynamic branching](https://books.ropensci.org/targets/dynamic.html) and [static branching](https://books.ropensci.org/targets/static.html) are difficult for most end users, so the mechanics of branching should happen behind the scenes. Simplification and guardrails are critical.
 
 #### Static branching
 
-[Static branching](https://wlandau.github.io/targets-manual/static.html) works best with a small number of potentially heterogeneous tasks. Functions [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html), [`tar_combine_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_combine_raw.html), [`tar_sub()`](https://wlandau.github.io/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) can help with the implementation internally. User-side inputs should be as simple as possible. For example, the [`stantargets::tar_stan_mcmc()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc.html) factory accepts a character vector of Stan model files and internally calls [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) to create a group of targets for each model.
+[Static branching](https://books.ropensci.org/targets/static.html) works best with a small number of potentially heterogeneous tasks. Functions [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html), [`tar_combine_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_combine_raw.html), [`tar_sub()`](https://wlandau.github.io/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) can help with the implementation internally. User-side inputs should be as simple as possible. For example, the [`stantargets::tar_stan_mcmc()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc.html) factory accepts a character vector of Stan model files and internally calls [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) to create a group of targets for each model.
 
 #### Dynamic branching
 
-[Dynamic branching](https://wlandau.github.io/targets-manual/dynamic.html) is best suited to larger collections of homogeneous tasks whose inputs are not necessarily known in advance. A factory with dynamic branching should create the `pattern` argument of [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) with behind-the-scenes metaprogramming, and it should support [batching](https://wlandau.github.io/targets-manual/dynamic.html#batching) to sensibly partition the work. Users should control the number of batches and reps per batch, but they should not be able to control the `pattern` argument. Examples of batching include [`tar_rep_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_rep_raw.html), [`tar_stan_mcmc_rep_summary()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc_rep_summary.html) and the [`targets-stan`](https://github.com/wlandau/targets-stan/) workflow.
+[Dynamic branching](https://books.ropensci.org/targets/dynamic.html) is best suited to larger collections of homogeneous tasks whose inputs are not necessarily known in advance. A factory with dynamic branching should create the `pattern` argument of [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) with behind-the-scenes metaprogramming, and it should support [batching](https://books.ropensci.org/targets/dynamic.html#batching) to sensibly partition the work. Users should control the number of batches and reps per batch, but they should not be able to control the `pattern` argument. Examples of batching include [`tar_rep_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_rep_raw.html), [`tar_stan_mcmc_rep_summary()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc_rep_summary.html) and the [`targets-stan`](https://github.com/wlandau/targets-stan/) workflow.
 
 ## Documentation
 
