fix: update URL to tarchetypes docs

--- a/contributing.Rmd
+++ b/contributing.Rmd
@@ -69,7 +69,7 @@ tar_manifest(fields = command)
 
 ### Metaprogramming
 
-Target factories invoke the [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) function. Whereas [`tar_target()`](https://docs.ropensci.org/targets/reference/tar_target.html) is for end users, [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) is for developers. [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) expects a character string for the `name` argument and expression objects for arguments `command` and `pattern`. Functions `deparse()`, [`substitute()`](http://adv-r.had.co.nz/Computing-on-the-language.html#substitute), [`tar_sub()`](https://wlandau.github.io/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://wlandau.github.io/tarchetypes/reference/tar_eval.html) can help you create these arguments.^[For more information about metaprogramming in base R, see the ["Computing on the Language" chapter of the Advanced R book](http://adv-r.had.co.nz/Computing-on-the-language.html#capturing-expressions).]
+Target factories invoke the [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) function. Whereas [`tar_target()`](https://docs.ropensci.org/targets/reference/tar_target.html) is for end users, [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) is for developers. [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) expects a character string for the `name` argument and expression objects for arguments `command` and `pattern`. Functions `deparse()`, [`substitute()`](http://adv-r.had.co.nz/Computing-on-the-language.html#substitute), [`tar_sub()`](https://docs.ropensci.org/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://docs.ropensci.org/tarchetypes/reference/tar_eval.html) can help you create these arguments.^[For more information about metaprogramming in base R, see the ["Computing on the Language" chapter of the Advanced R book](http://adv-r.had.co.nz/Computing-on-the-language.html#capturing-expressions).]
 
 The `quote()` function captures arbitrary expressions.
 
@@ -155,11 +155,11 @@ Many of the remaining arguments to [`tar_target_raw()`](https://docs.ropensci.or
 
 #### Static branching
 
-[Static branching](https://books.ropensci.org/targets/static.html) works best with a small number of potentially heterogeneous tasks. Functions [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html), [`tar_combine_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_combine_raw.html), [`tar_sub()`](https://wlandau.github.io/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) can help with the implementation internally. User-side inputs should be as simple as possible. For example, the [`stantargets::tar_stan_mcmc()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc.html) factory accepts a character vector of Stan model files and internally calls [`tar_map()`](https://wlandau.github.io/tarchetypes/reference/tar_map.html) to create a group of targets for each model.
+[Static branching](https://books.ropensci.org/targets/static.html) works best with a small number of potentially heterogeneous tasks. Functions [`tar_map()`](https://docs.ropensci.org/tarchetypes/reference/tar_map.html), [`tar_combine_raw()`](https://docs.ropensci.org/tarchetypes/reference/tar_combine_raw.html), [`tar_sub()`](https://docs.ropensci.org/tarchetypes/reference/tar_sub.html), and [`tar_eval()`](https://docs.ropensci.org/tarchetypes/reference/tar_map.html) can help with the implementation internally. User-side inputs should be as simple as possible. For example, the [`stantargets::tar_stan_mcmc()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc.html) factory accepts a character vector of Stan model files and internally calls [`tar_map()`](https://docs.ropensci.org/tarchetypes/reference/tar_map.html) to create a group of targets for each model.
 
 #### Dynamic branching
 
-[Dynamic branching](https://books.ropensci.org/targets/dynamic.html) is best suited to larger collections of homogeneous tasks whose inputs are not necessarily known in advance. A factory with dynamic branching should create the `pattern` argument of [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) with behind-the-scenes metaprogramming, and it should support [batching](https://books.ropensci.org/targets/dynamic.html#batching) to sensibly partition the work. Users should control the number of batches and reps per batch, but they should not be able to control the `pattern` argument. Examples of batching include [`tar_rep_raw()`](https://wlandau.github.io/tarchetypes/reference/tar_rep_raw.html), [`tar_stan_mcmc_rep_summary()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc_rep_summary.html) and the [`targets-stan`](https://github.com/wlandau/targets-stan/) workflow.
+[Dynamic branching](https://books.ropensci.org/targets/dynamic.html) is best suited to larger collections of homogeneous tasks whose inputs are not necessarily known in advance. A factory with dynamic branching should create the `pattern` argument of [`tar_target_raw()`](https://docs.ropensci.org/targets/reference/tar_target_raw.html) with behind-the-scenes metaprogramming, and it should support [batching](https://books.ropensci.org/targets/dynamic.html#batching) to sensibly partition the work. Users should control the number of batches and reps per batch, but they should not be able to control the `pattern` argument. Examples of batching include [`tar_rep_raw()`](https://docs.ropensci.org/tarchetypes/reference/tar_rep_raw.html), [`tar_stan_mcmc_rep_summary()`](https://docs.ropensci.org/stantargets//reference/tar_stan_mcmc_rep_summary.html) and the [`targets-stan`](https://github.com/wlandau/targets-stan/) workflow.
 
 ## Documentation
 
