--- a/packages.Rmd
+++ b/packages.Rmd
@@ -38,7 +38,7 @@ knitr::opts_chunk$set(echo = FALSE)
 <th style="font-weight:normal;">
 <br>
 [![](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) 
-[`stantargets`](https://docs.ropensci.org/stantargets/) is a workflow framework for Bayesian data analysis with [`cmdstanr`](https://mc-stan.org/cmdstanr/). With concise, easy-to-use syntax, it defines versatile families of targets tailored to Bayesian statistics, from a [single MCMC run with postprocessing](https://docs.ropensci.org/stantargets//articles/mcmc.html) to [large simulation studies](https://docs.ropensci.org/stantargets//articles/mcmc_rep.html).
+[`stantargets`](https://docs.ropensci.org/stantargets/) is a workflow framework for Bayesian data analysis with [`cmdstanr`](https://mc-stan.org/cmdstanr/). With concise, easy-to-use syntax, it defines versatile families of targets tailored to Bayesian statistics, from a [single MCMC run with postprocessing](https://docs.ropensci.org/stantargets/articles/mcmc.html) to [large simulation studies](https://docs.ropensci.org/stantargets//articles/mcmc_rep.html).
 <br><br>
 </th>
 </tr>
@@ -49,7 +49,7 @@ knitr::opts_chunk$set(echo = FALSE)
 </th>
 <th style="font-weight:normal;">
 <br>
-[![](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) Like [`stantargets`](https://docs.ropensci.org/stantargets/), [`jagstargets`](https://wlandau.github.io/jagstargets) is a workflow framework for Bayesian data analysis, with support for both single MCMC runs and large-scale simulation studies. It invokes [JAGS](http://mcmc-jags.sourceforge.net/) through the [`R2jags`](https://github.com/suyusung/R2jags) package, which has nice features such as the ability to parallelize chains across local R processes.
+[![](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) Like [`stantargets`](https://docs.ropensci.org/stantargets), [`jagstargets`](https://wlandau.github.io/jagstargets) is a workflow framework for Bayesian data analysis, with support for both single MCMC runs and large-scale simulation studies. It invokes [JAGS](http://mcmc-jags.sourceforge.net/) through the [`R2jags`](https://github.com/suyusung/R2jags) package, which has nice features such as the ability to parallelize chains across local R processes.
 <br><br>
 </th>
 </tr>
